fix(QSeparator): do not force width or height to avoid overflowing the parent #8307 (#8308)

--- a/ui/src/css/core/flex.sass
+++ b/ui/src/css/core/flex.sass
@@ -135,9 +135,9 @@
       > *
         margin-left: $size
     &-y-#{$name}
-      margin-top: -$size
+      margin-top: -$size #{"/* rtl:ignore */"}
       > *
-        margin-top: $size
+        margin-top: $size #{"/* rtl:ignore */"}
     &-#{$name}
       @extend .q-gutter-x-#{$name}
       @extend .q-gutter-y-#{$name}
@@ -147,9 +147,9 @@
       > *
         padding-left: $size
     &-y-#{$name}
-      margin-top: -$size
+      margin-top: -$size #{"/* rtl:ignore */"}
       > *
-        padding-top: $size
+        padding-top: $size #{"/* rtl:ignore */"}
     &-#{$name}
       @extend .q-col-gutter-x-#{$name}
       @extend .q-col-gutter-y-#{$name}
